# email-expiration

./: email-expirer.py  pyproject.toml
