[project]
name = "email-expiration"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.176.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "tqdm>=4.67.1",
    "typer-slim>=0.16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.3",
    "types-tqdm>=4.67.0.20250516",
]
